--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "unsplash-client-hipo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jamcry.github.io/unsplash-client-hipo/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
